--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2433,107 +2433,107 @@ stories:
   domain: http://www.advocate-news.com/
   link: https://www.advocate-news.com/2019/06/28/boomers-not-millennials-may-be-the-most-active-generation-in-the-gig-economy/
 images:
-- name: window-window-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dry-skin.jpg
-- name: stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-border-traffic.jpg
-- name: oldhousecars-house-old-cars-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-constitution.jpg
-- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-- name: art-museum-art-museum-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-- name: oldhotel-oldhotel-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alberto-giacometti.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-- name: catacombs-catacombs-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: server-racks-door-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-internet-numbers.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-- name: old-granary-field-granaryfield-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-two.jpg
-- name: beach-rocks-beach-rocks-currents-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-electricity.jpg
-- name: power-lines-power-lines-empty-space-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-rainbow-festival.jpg
-- name: abandonedbuildings_sand_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sand_paper.jpg
-- name: paris-paris-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-mucha-mult.jpg
-- name: hollywood-building-hollywood-building-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colorful-blocks.jpg
-- name: windowmountain-window-mountain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smoking-cigarette.jpg
-- name: docks-docks-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-bright-sand.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-- name: mosaic-face-mosaic-face-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sunday.jpg
-- name: adam-smith-adam-smith-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gred-mash.jpg
-- name: death-valley-death-valley-national-park-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gred-mash.jpg
-- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-- name: store-on-corner-store-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-hot-spicy.jpg
-- name: dc-statue-dcstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
-- name: christianity-christianity-under-construction-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
-- name: aws-s3-stories-new-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-downtheline-dark-dali.jpg
-- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
-- name: oldhouse-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
-- name: old-granary-field-oldhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-cinnamon-rolls.jpg
-- name: supreme-court-supremecourt-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-three.jpg
-- name: dragon-desert-desert-dragon-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-monet-one.jpg
-- name: old-granary-field-oldhouse-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alien-goggles.jpg
-- name: machine-road-machine-road-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-green-zuma.jpg
-- name: mosaic-face-mosaic-face-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-cinnamon-rolls.jpg
-- name: store-on-corner-store-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-creativity.jpg
-- name: oldhouse-granaryfield-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crunch-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-attack-planes.jpg
-- name: bluelake-dark-soul-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-soul-file-00-00-00-00.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-600.jpg
-- name: castle-wall-DSC-0067-blue-granite.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
-- name: fence-mexico-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-satan-red.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-- name: oldhouse-oldhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
-- name: castle-wall-DSC-0067-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-space-pizza.JPG
-- name: rockingchair-rockingchair-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-post-modern.jpg
-- name: oldcabin-store-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
-- name: amusement-park-amusement-park-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
-- name: berlinwall2-berlinwall-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: machine-road-machine-road-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+- name: legal-statue-legalstatue-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-marcel-duchamp.jpg
+- name: sand-hand-sand-hand-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-monet-one.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+- name: rockingchair-rockingchair-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-rainbow-festival.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: oldhousecars-house-old-cars-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
+- name: miamibeach-miamibeach-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crunch-paper.jpg
+- name: aws-s3-stories-old-door-lock-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-door-lock-copper-circuit.jpg
+- name: oldhouse-oldhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crunch-paper.jpg
+- name: powerlines-power-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-neo-instinct.jpg
+- name: yosemite-yosemite-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purp-paper.jpg
+- name: dc-statue-dcstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-really-hot.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+- name: rain-princess-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_2971.jpg
+- name: blossombar-alien-goggles-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-00-00.jpg
+- name: abandonedbuildings_blue_circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_circuit.jpg
+- name: windowmountain-window-mountain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-bright-sand.jpg
+- name: window-window-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-light-dali.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
+- name: white-house-whitehouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-propaganda-leaflets.jpg
+- name: yosemite-yosemite-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gred-mash.jpg
+- name: machine-road-machine-road-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-pablo-blue.jpg
+- name: store-on-corner-store-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-spagetti-accident.jpg
+- name: beach-clouds-lifeguard-beachclouds-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dali-two.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-dali.jpg
+- name: art-museum-art-museum-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-creativity.jpg
+- name: nyc-flag-nycflag-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-constitution.jpg
+- name: oldcabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-kandinsky-bv.jpg
+- name: meadowbutterfly-meadow-butterfly-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sand-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
+- name: oldroad-old-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-internet-numbers.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+- name: berlinwall-DSC-0084-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-graham-sutherland.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+- name: fence-mexico-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
+- name: san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+- name: server-cloud-server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+- name: catacombs-catacombs-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-propaganda-leaflets.jpg
+- name: castle-wall-DSC-0067-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
+- name: eduardo-eduardo-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+- name: hollywood-building-hollywood-building-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-constitution.jpg
+- name: oldroad-old-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gan-vogh.jpg
+- name: trucksilo-trucksilo-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-hot-spicy.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
+- name: ellis-island-ellisisland-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dry-skin.jpg
+- name: old-cabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
+- name: amusement-park-amusement-park-2-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
 ---
 Blackhawks Reacquire Shaw In Trade With Canadiens.&nbsp;Up Close With Jack Flug.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;As Amada Cruz Exits Phoenix Art Museum, Others Shown The Door.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;Exhibit Is First Major Show Of Artwork By Native Women.&nbsp;Thundering Herd's Jon Elmore Reaches Deal With Boston Celtics.&nbsp;County School Board Members Discussing New Education Bill.&nbsp;
